--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>My first GitHub Project</h1>
-    <p>This is my second change, I think?</p>
+    <p>This is my second change, I think?
+    <p>Testing connection</p>
+    </p>
 </body>
 </html>
